feat(scw): wip add scaleway workers and qaas
